apps/talos_cluster/stalwart/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-admin
  namespace: stalwart
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https-stalwart-nordgedanken
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https-webmail-midnightthoughts
  hostnames:
    - stalwart.nordgedanken.dev
    - webmail.midnightthoughts.space
  rules:
    - backendRefs:
        - name: stalwart-mail
          port: 80
