apps/talos_cluster/stalwart/routing.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: stalwart-smtp
  namespace: stalwart
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mail.midnightthoughts.space
spec:
  parentRefs:
    - name: email-gateway
      namespace: envoy-gateway
      sectionName: smtp
  rules:
    - backendRefs:
        - name: stalwart-mail
          port: 25
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: stalwart-submissions
  namespace: stalwart
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mail.midnightthoughts.space
spec:
  parentRefs:
    - name: email-gateway
      namespace: envoy-gateway
      sectionName: submissions
  rules:
    - backendRefs:
        - name: stalwart-mail
          port: 465
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: stalwart-submission
  namespace: stalwart
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mail.midnightthoughts.space
spec:
  parentRefs:
    - name: email-gateway
      namespace: envoy-gateway
      sectionName: submission
  rules:
    - backendRefs:
        - name: stalwart-mail
          port: 587
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: stalwart-imap
  namespace: stalwart
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mail.midnightthoughts.space
spec:
  parentRefs:
    - name: email-gateway
      namespace: envoy-gateway
      sectionName: imap
  rules:
    - backendRefs:
        - name: stalwart-mail
          port: 143
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: stalwart-imaps
  namespace: stalwart
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mail.midnightthoughts.space
spec:
  parentRefs:
    - name: email-gateway
      namespace: envoy-gateway
      sectionName: imaps
  rules:
    - backendRefs:
        - name: stalwart-mail
          port: 993
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: stalwart-mail-policy
  namespace: stalwart
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-smtp
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-submissions
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-submission
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-imap
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: stalwart-imaps
  proxyProtocol:
    version: "V2"
